--- a/style.css
+++ b/style.css
@@ -69,9 +69,9 @@ body{
         abajo tambien, pero esta es otra manera.
     */
     text-align: center;
-    width: 450px;
+    width: 465px;
     border: solid #0E1C36;
-    height: 320px;
+    height: 315px;
     padding: 5px;
     margin: 10px auto;
     border-radius: 30px;
@@ -79,9 +79,8 @@ body{
 
 
 .cells{
-    font-size: 70px;
-    font-weight: bold;
-    border: solid 3px #2F6690;
+    font-size: 80px;
+    border: solid 3px #0E1C36;
     width: 150px;
     height: 100px;
     cursor: pointer;
@@ -158,4 +157,15 @@ table tr td:last-child{
     cursor: pointer;
     background-color: #2E4756;
     transition: all 0.3s ease;
+}
+
+.gameWin{
+    font-size: 80px;
+    width: 150px;
+    height: 100px;
+    cursor: pointer;
+    border: solid 3px #0E1C36;
+    background-color: #2E4756;
+    color: #F9FBF2;
+    border-radius: 15px;
 }
